# template-python-repo

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  changelog.md  requirements-dev.txt  setup.cfg  setup.py
my_package/: __init__.py  constants.py
scripts/: build_docker.sh  dummy.sh
