# pytest pycodestyle configuration
[tool:pytest]
# Function starting with the following pattern are considered for test cases.
python_functions=test_

# pytest pycodestyle configuration
codestyle_max_line_length = 88
codestyle_ignore = E302 W503 E203 E501 E265 E402 E251 E211
codestyle_exclude =
    docs/,
    data/
filterwarnings =
    ignore::ResourceWarning:ruamel[.*]

log_cli = true
log_cli_level = WARNING

[metadata]
description-file = README.md
license_file = LICENSE.txt

[pycodestyle]
max-line-length = 88

[flake8]
max-line-length = 88
ignore = W503, E121, E126, E211, E225, E501, E203, E402, F401, F811, E231
exclude =
    docs
